Change nav-link to custom-link

--- a/main.scss
+++ b/main.scss
@@ -106,7 +106,7 @@ nav {
 		}
 	}
 
-	.nav-link {
+	a {
 		// Chunk up nav links
 		padding: 5vh 10px;
 		// Position over button pseudo
@@ -149,7 +149,7 @@ nav {
 			}
 		}
 
-		.nav-link {
+		a {
 			// Translate off screen for slide-in
 			transform: translateX(100vw);
 			&:nth-of-type(1){transition-delay: 200ms};
