--- a/main.scss
+++ b/main.scss
@@ -133,7 +133,9 @@ nav {
 		&:nth-of-type(3){transition-delay: 300ms};
 		// Box-shadow
 		box-shadow: 0px 0px yellow inset;
-		&:hover {box-shadow: -50vw 0px yellow inset;}
+		// Hover offset of negative text height + padding
+		// Because box-shadow can't be percentage :(
+		&:hover {box-shadow: 0px calc((var(--hero-height) + 10vh) * -1) yellow inset;}
 	}
 
 	&.min {
