--- a/main.scss
+++ b/main.scss
@@ -71,15 +71,17 @@ nav {
 	justify-content: center;
 	align-items: center;
 	font-size: 2rem;
+	transform: translateX(100%);
 
 	&::before {
 		@include pseudo();
 		// Shadow over page to extend click listener
 		width: 100vw;
 		left: -50vw;
-		opacity: 0.2;
+		opacity: 0;
 		background-color: black;
-		transition: opacity var(--nav-transition-time) ease-out var(--nav-transition-time);
+		transform: scale(0);
+		transition: opacity var(--nav-transition-time) ease-out;
 	}
 	
 	button {
@@ -98,7 +100,7 @@ nav {
 		top: 12.5vh;
 		left: 0;
 		transition: transform var(--nav-transition-time) ease-in;
-		transform: translate(-75%,32.5vh) rotate(-90deg);
+		transform: translate(-75%,0vh) rotate(-90deg);
 		font-size: 2rem;
 		cursor: pointer;
 
@@ -112,7 +114,7 @@ nav {
 			// Make circle
 			border-radius: 50%;
 			// Rotate to black bordered side
-			transform: rotate(-45deg) scale(6) translate(-25%,25%);
+			transform: rotate(135deg) scale(1);
 			transition: transform var(--nav-transition-time) ease-in;
 			// Add half orange, half black border
 			border: $border;
@@ -133,47 +135,39 @@ nav {
 		// Stagger slide-in of links
 		transition: transform 270ms ease-in,
 		 box-shadow 270ms ease-in;
-		transform: translateX(0%);
-		&:nth-of-type(1){transition-delay: 100ms};
-		&:nth-of-type(2){transition-delay: 200ms};
-		&:nth-of-type(3){transition-delay: 300ms};
+		transform: translateX(100vw);
 		// Box-shadow
 		box-shadow: 0px 0px yellow inset;
 		// Hover offset of negative text height + padding
 		// Because box-shadow can't be percentage :(
-		&:hover {box-shadow: 0px calc((var(--hero-height) + 10vh) * -1) yellow inset;}
+		&:hover, &:focus {
+			box-shadow: 0px calc((var(--hero-height) + 10vh) * -1) yellow inset;
+		}
 	}
 
-	&.min {
-		// Push off side on minimized
-		transform: translateX(100%);
+	&:hover, &:focus {
+		button::before {
+			transform: rotate(-45deg);
+		}
+	}
 
+	&.max {
+		transform: translateX(0%);
 		&::before {
-			// Hide & minimize shadow
-			transform: scaleX(0);
-			opacity: 0;
+			transition-delay: var(--nav-transition-time);
+			transform: scale(1);
+			opacity: 0.2;
 		}
-
 		button {
-			transform: translateX(-75%) rotate(-90deg);
-			&::before {
-				transition-delay: 0ms;
-				transform: rotate(135deg) scale(1);
-			}
+			transform: translateY(32.5vh);
 		}
-
-		&:hover {
-			button::before {
-				transform: rotate(-45deg);
-			}
+		button::before {
+			transition-delay: 0ms;
+			transform: rotate(-45deg) scale(6) translate(-25%, 25%);
+			border-color: black;
 		}
-
 		a {
-			// Translate off screen for slide-in
-			transform: translateX(100vw);
-			&:nth-of-type(1){transition-delay: 200ms};
-			&:nth-of-type(2){transition-delay: 100ms};
-			&:nth-of-type(3){transition-delay: 000ms};
+			transform: translateX(0%);
 		}
 	}
 }
