--- a/main.scss
+++ b/main.scss
@@ -520,15 +520,24 @@ footer {
 		@include grid-center();
 		font-size: 1.5rem;
 		margin: 0;
+		// Assign grid areas
+		&:nth-of-type(1) {grid-area: f1;}
+		&:nth-of-type(2) {grid-area: f2;}
+		&:nth-of-type(3) {grid-area: f6;}
 	}
 
 	.main-link {
 		// Center in grid cell
 		@include grid-center();
 		font-size: 1.2rem;
+		// Assign grid areas
+		&:nth-of-type(1) {grid-area: f4;}
+		&:nth-of-type(2) {grid-area: f8;}
+		&:nth-of-type(3) {grid-area: f10;}
 	}
 
 	.sub-link-container {
+		grid-area: f7;
 		// Clear list styling
 		list-style: none;
 		margin: 0;
@@ -539,5 +548,10 @@ footer {
 		}
 	}
 
+	.block {
+		// Assign grid areas
+		&:nth-of-type(1){grid-area: f3};
+		&:nth-of-type(2){grid-area: f5};
+		&:nth-of-type(3){grid-area: f9};
 	}
 }
