Background color for footer

--- a/main.scss
+++ b/main.scss
@@ -517,6 +517,7 @@ footer {
 	text-align: center;
 	// Half border to combine with grid item borders
 	border: $half-border;
+	background-color: white;
 
 	h3 {
 		// Center in grid cell
