Swap y-padding to margin on nav links

--- a/main.scss
+++ b/main.scss
@@ -128,7 +128,8 @@ nav {
 
 	a {
 		// Chunk up nav links
-		padding: 5vh 10px;
+		padding: 10px;
+		margin: 5vh 0;
 		// Position over button pseudo
 		z-index: 1;
 		// Beefy font size
