--- a/main.scss
+++ b/main.scss
@@ -534,6 +534,7 @@ section {
 // FOOTER
 
 footer {
+	margin-top: 15%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-rows: repeat(5, minmax(1rem, auto));
