--- a/main.scss
+++ b/main.scss
@@ -17,6 +17,14 @@ h1,h2,h3,h4,h4,.display {
 .ft-green {color: green;}
 .ft-yellow {color: yellow;}
 
+// Background color classes
+.bg-red {background-color: red;}
+// Add font color overrides for contrast
+.bg-blue {background-color: blue; color: white !important;}
+.bg-green {background-color: green; color: white !important;}
+.bg-yellow {background-color: yellow;}
+.bg-white {background-color: white;}
+
 $border: 8px solid black;
 $half-border: 4px solid black;
 $mobile: 500px;
