--- a/main.scss
+++ b/main.scss
@@ -425,7 +425,7 @@ section {
 			z-index: 1;
 			// Hide pseudo overflow
 			overflow: hidden;
-			// Reinastate underline
+			// Reinstate underline
 			text-decoration: underline;
 
 			&::before {
