--- a/main.scss
+++ b/main.scss
@@ -236,6 +236,7 @@ nav {
 	}
 	h1 {
 		font-size: var(--hero-height);
+		cursor: default;
 	}
 	.char {
 		// Set display for transformations on spans
