--- a/main.scss
+++ b/main.scss
@@ -381,6 +381,9 @@ section {
 // ==================ABOUT SECTION==================
 
 #about {
+	aside img {
+		transform: scale(1.5);
+	}
 	.section-container {
 		p:first-of-type {
 			hyphens: auto;
