--- a/main.css
+++ b/main.css
@@ -31,6 +31,14 @@ h1, h2, h3, h4, h4, .display {
   background-color: red;
 }
 
+.bg-gray {
+  background-color: lightgray;
+}
+
+.bg-white {
+  background-color: white;
+}
+
 .bg-blue {
   background-color: blue;
   color: white !important;
@@ -39,14 +47,6 @@ h1, h2, h3, h4, h4, .display {
 .bg-green {
   background-color: green;
   color: white !important;
-}
-
-.bg-yellow {
-  background-color: yellow;
-}
-
-.bg-white {
-  background-color: white;
 }
 
 a {
@@ -68,6 +68,48 @@ a:not(.custom-link):hover {
 
 a:visited {
   color: blue;
+}
+
+.box-link {
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  border: none;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  text-decoration: underline;
+}
+
+.box-link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: yellow;
+  z-index: -1;
+  -webkit-transform: skewX(-40deg) scaleX(0);
+          transform: skewX(-40deg) scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  width: 200%;
+  left: -25%;
+  -webkit-transition: -webkit-transform 320ms ease-in;
+  transition: -webkit-transform 320ms ease-in;
+  transition: transform 320ms ease-in;
+  transition: transform 320ms ease-in, -webkit-transform 320ms ease-in;
+}
+
+.box-link:hover::before {
+  -webkit-transform: skewX(-40deg) scaleX(1);
+          transform: skewX(-40deg) scaleX(1);
+  -webkit-transform-origin: left;
+          transform-origin: left;
 }
 
 /*=====================NAV=====================*/
@@ -263,11 +305,7 @@ nav.max button::before {
   margin: 0 auto;
   width: 100%;
   min-height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
   padding: 1%;
-  z-index: -1;
 }
 
 #hero * {
@@ -281,6 +319,35 @@ nav.max button::before {
 
 #hero .char {
   display: inline-block;
+}
+
+#hero svg {
+  height: 33%;
+  width: auto;
+  position: absolute;
+  right: 10%;
+  bottom: 10%;
+  overflow: visible;
+  z-index: -1;
+}
+
+.ghost__body-top, .ghost__body-low, .ghost__tail, .ghost__eye {
+  fill: white;
+}
+
+.ghost__eye {
+  stroke: black;
+  stroke-width: 5;
+}
+
+.ghost__shadow {
+  fill: black;
+  stroke: none;
+}
+
+.ghost__tail {
+  -webkit-transform: translateX(70%);
+          transform: translateX(70%);
 }
 
 /*====================HEAD====================*/
@@ -369,15 +436,6 @@ section aside img {
   mix-blend-mode: multiply;
   height: auto;
   width: 100%;
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
-}
-
-section aside svg {
-  margin-left: 10px;
-  height: 90%;
-  width: auto;
-  overflow: unset;
 }
 
 section .section-container {
@@ -402,8 +460,9 @@ section .section-container p:last-of-type {
   }
 }
 
-#about {
-  margin-top: 100vh;
+#about aside img {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 #about .section-container p:first-of-type {
@@ -428,19 +487,14 @@ section .section-container p:last-of-type {
   }
 }
 
-.ghost__body-top, .ghost__body-low, .ghost__tail {
-  fill: white;
+#portfolio .portfolio-header {
+  z-index: 2;
+  border-bottom: 8px solid black;
 }
 
-.ghost__eye {
-  fill: none;
-  stroke: black;
-  stroke-width: 5;
-}
-
-.ghost__shadow {
-  fill: black;
-  stroke: none;
+#portfolio .portfolio-header h2 {
+  text-align: center;
+  padding: 2% var(--section-padding);
 }
 
 #portfolio .section-container {
@@ -454,6 +508,8 @@ section .section-container p:last-of-type {
       grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   grid-gap: 8px;
   background-color: black;
+  border-left: 8px solid black;
+  border-right: 8px solid black;
 }
 
 #portfolio .button-grid a {
@@ -506,6 +562,10 @@ section .section-container p:last-of-type {
   overflow: hidden;
   text-align: center;
   border-top: 8px solid black;
+}
+
+.portfolio-entry:first-of-type {
+  border-top: none;
 }
 
 .portfolio-entry .portfolio-entry__title {
